--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "lab6-client",
-  "homepage": "https://ViktorDebugger.github.io/lab6-client",
+  "name": "lab5-client",
+  "homepage": "https://YevheniyaM.github.io/lab5-client",
   "version": "0.0.0",
   "private": true,
   "dependencies": {
